--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -740,6 +740,13 @@ jobs:
         with:
           name: swift-binaries_${{ matrix.os.short_name }}-all
           path: swift-binaries_${{ matrix.os.short_name }}-all.zip
+        if: matrix.os.name == 'macOS'
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: swift-binaries_${{ matrix.os.short_name }}-signed
+          path: swift-binaries_${{ matrix.os.short_name }}-all.zip
+        if: matrix.os.name != 'macOS'
 
   sign_zipped_binaries:
     name: Sign Zipped Binaries
@@ -750,8 +757,6 @@ jobs:
       matrix:
         os:
           - { name: macOS, short_name: "macos" }
-          - { name: Windows, short_name: "windows" }
-          - { name: Linux, short_name: "linux" }
     runs-on: [self-hosted, '${{ matrix.os.name }}', code-signer]
     steps:
       - name: Pull zipped binaries
@@ -762,17 +767,18 @@ jobs:
 
       - name: Sign Binaries.
         shell: bash
+        working-directory: binaries-all
         run: |
           codesign \
             -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
-            -f --timestamp "binaries-all/swift-binaries_${{ matrix.os.short_name }}-all.zip"
+            -f --timestamp "swift-binaries_${{ matrix.os.short_name }}-all.zip"
           xcrun altool \
             --notarize-app \
-            --file binaries-all/swift-binaries_${{ matrix.os.short_name }}-all.zip\
+            --file swift-binaries_${{ matrix.os.short_name }}-all.zip\
             --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
             --apiKey ${{ secrets.APPLE_KEY_ID }} \
             --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
-        if: matrix.os.name == 'macOS'
+
       - uses: actions/upload-artifact@v2
         with:
           name: swift-binaries_${{ matrix.os.short_name }}-signed
