--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -46,6 +46,8 @@ env_logger = { version = "0.9", optional = true }
 mimalloc = { version = "0.1", default-features = false }
 curl = { version = "0.4", features = ["ssl", "static-curl"] }
 indicatif = { version = "0.16", optional = true }
+ipc-channel = "0.16.0"
+envy = "0.4.2"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = { git = "https://github.com/swift-nav/serialport-rs.git" }
