--- a/entrypoint/Cargo.toml
+++ b/entrypoint/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2018"
 name = "swift-console"
 version = "0.1.0"
 
+[lib]
+name = "entrypoint"
+bench = false
+
 [[bin]]
 bench = false
 name = "swift-console"
@@ -16,6 +20,10 @@ bench = false
 name = "swift-console-splash"
 path = "src/splash.rs"
 required-features = ["splash"]
+
+[dependencies.lazy_static]
+optional = true
+version = "1.4.0"
 
 [dependencies.winit]
 optional = true
@@ -37,7 +45,7 @@ version = "0.16"
 
 [features]
 entrypoint = ["pyo3", "windows"]
-splash = ["minifb", "image", "winit"]
+splash = ["minifb", "image", "winit", "windows", "lazy_static"]
 
 [target]
 [target."cfg(target_os = \"windows\")"]
