--- a/Makefile.toml
+++ b/Makefile.toml
@@ -49,7 +49,7 @@ elseif eq ${os} linux
   set_env SHIBOKEN_WHEEL shiboken6-6.3.0-6.3.0-cp39-cp39-linux_x86_64.whl
 else
   if is_empty ${QTDIR}
-    QTDIR = set "${HOME}/Qt/6.3.0/clang_64"
+    QTDIR = set "${HOME}/Qt/6.3.0/macos"
     set_env QTDIR "${QTDIR}"
   end
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
@@ -57,7 +57,7 @@ else
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env DIST_PYSIDE6_RCC "${WORKSPACE}/py39-dist/bin/pyside6-rcc"
   set_env PYSIDE6_RCC "${WORKSPACE}/py39/bin/pyside6-rcc"
-  set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-macosx_10_15_x86_64.whl
+  set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-macosx_12_x86_64.whl
   set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config_console.txt"
   output = exec --fail-on-error gcc -dumpmachine
@@ -65,8 +65,8 @@ else
   set_env BUILD_TRIPLET ${triplet}
   # Below needs to be specified for macOS - I'm not sure where it is installed on macOS
   set_env QTPATHS_PATH "${QTDIR}/bin/qtpaths"
-  set_env PYSIDE_WHEEL PySide6-6.3.0-6.3.0-cp39-cp39-macosx_10_13_x86_64.whl
-  set_env SHIBOKEN_WHEEL shiboken6-6.3.0-6.3.0-cp39-cp39-macosx_10_13_x86_64.whl
+  set_env PYSIDE_WHEEL PySide6-6.3.0a1-6.3.0-cp39-cp39-macosx_12_x86_64.whl
+  set_env SHIBOKEN_WHEEL shiboken6-6.3.0a1-6.3.0-cp39-cp39-macosx_12_x86_64.whl
 end
 ''',
 ]
