--- a/Makefile.toml
+++ b/Makefile.toml
@@ -296,6 +296,22 @@ exec --fail-on-error zstd -f -d py39.tar.zst
 exec --fail-on-error tar -xvf py39.tar
 '''
 
+[tasks.setup-builder-whl]
+[tasks.setup-builder-whl.mac]
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error ${PYTHON} -m pip install shiboken2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
+exec --fail-on-error ${PYTHON} -m pip install shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
+exec --fail-on-error ${PYTHON} -m pip install PySide2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
+'''
+[tasks.setup-builder-whl.linux]
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error ${PYTHON} -m pip install shiboken2-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl
+exec --fail-on-error ${PYTHON} -m pip install shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl
+exec --fail-on-error ${PYTHON} -m pip install PySide2-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl
+'''
+
 [tasks.setup-builder]
 dependencies = ["get-standalone-py"]
 script_runner = "@duckscript"
@@ -309,9 +325,7 @@ cp . ../../../py39
 cd ../../../
 exec --fail-on-error ${PYTHON} ./get-pip.py
 exec --fail-on-error ${PYTHON} -m pip install wheel flit . ".[test]"
-exec --fail-on-error ${PYTHON} -m pip install shiboken2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
-exec --fail-on-error ${PYTHON} -m pip install shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
-exec --fail-on-error ${PYTHON} -m pip install PySide2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
+cm_run_task setup-builder-whl
 cm_run_task generate-resources
 '''
 
@@ -388,12 +402,21 @@ cp target/x86_64-pc-windows-msvc/release/console_backend.pdb py39-dist/Lib/site-
 '''
 
 [tasks.build-dist-install-frontend-wheel]
+[tasks.build-dist-install-frontend-wheel.mac]
 dependencies = ["build-frontend-wheel"]
 script = '''
 ${DIST_PYTHON} -m pip install ./dist/swiftnav_console-0.1.0-py3-none-any.whl --force-reinstall
 ${DIST_PYTHON} -m pip install shiboken2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
 ${DIST_PYTHON} -m pip install shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
 ${DIST_PYTHON} -m pip install PySide2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl
+'''
+[tasks.build-dist-install-frontend-wheel.linux]
+dependencies = ["build-frontend-wheel"]
+script = '''
+${DIST_PYTHON} -m pip install ./dist/swiftnav_console-0.1.0-py3-none-any.whl --force-reinstall
+${DIST_PYTHON} -m pip install shiboken2-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl
+${DIST_PYTHON} -m pip install shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl
+${DIST_PYTHON} -m pip install PySide2-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl
 '''
 
 [tasks.build-dist-install-backend-wheel]
